--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Bernardo Martello - Desenvolvedor e Designer</title>
   <meta name="description" content="Desenvolvedor Front End e UX/UI Designer Localizado no Rio de Janeiro">
   <link rel="stylesheet" href="./css/style.min.css">
+  <link rel="icon" href="/favicon.svg" type="image/svg+xml">
 </head>
 
 <body>
@@ -28,7 +29,7 @@
       <p>Localizado no Rio de Janeiro 🏖</p>
     </div>
   </main>
-
+cle
   <section class="experiencia" id="experiencia" aria-label="Experiência">
     <h2 class="subtitulo">Experiência</h2>
     <div>
